# FastLSH

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  CMakeLists_safe.txt  Doxyfile  Makefile  README.md  boostmpiLSH  cmake_install.cmake  shellCmd.sh
benchmark/FastLSH-hadoop/: pom.xml
benchmark/FastLSH-spark/: result
benchmark/FastLSH-spark/src/: FastLSH.scala
html/: Computer_8h_source.html  FileLoader_8h_source.html  Generator_8h_source.html  LSH_8h_source.html  ParameterHolder_8h_source.html  annotated.html  classComputer-members.html  classComputer.html  classComputerOpenMP-members.html  classComputerOpenMP.html  classComputerOpenMPNormal-members.html  classComputerOpenMPNormal.html  classComputerOpenMPNormal__coll__graph.dot  classComputerOpenMPNormal__coll__graph.md5  classComputerOpenMPNormal__inherit__graph.dot  classComputerOpenMPNormal__inherit__graph.md5  classComputerOpenMPQuick-members.html  classComputerOpenMPQuick.html  classComputerOpenMPQuick__coll__graph.dot  classComputerOpenMPQuick__coll__graph.md5  classComputerOpenMPQuick__inherit__graph.dot  classComputerOpenMPQuick__inherit__graph.md5  classComputerOpenMP__coll__graph.dot  classComputerOpenMP__coll__graph.md5  classComputerOpenMP__inherit__graph.dot  classComputerOpenMP__inherit__graph.md5  classComputerPthread-members.html  classComputerPthread.html  classComputerPthreadNormal-members.html  classComputerPthreadNormal.html  classComputerPthreadNormal__coll__graph.dot  classComputerPthreadNormal__coll__graph.md5  classComputerPthreadNormal__inherit__graph.dot  classComputerPthreadNormal__inherit__graph.md5  classComputerPthreadQuick-members.html  classComputerPthreadQuick.html  classComputerPthreadQuick__coll__graph.dot  classComputerPthreadQuick__coll__graph.md5  classComputerPthreadQuick__inherit__graph.dot  classComputerPthreadQuick__inherit__graph.md5  (+179 more)
html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
include/: Computer.cpp  Computer.h  FileLoader.h  Generator.cpp  Generator.h  LSH.h  LSHEssential.h  ParameterHolder.h  PthreadComputer.cpp  fileLoader.h  hdfsLoader.h  lfsLoader.h
include/otherClasses/: Computer.h  FileLoader.h  Generator.h  ParameterHolder.h
latex/: annotated.tex  classComputer.tex  classComputer.tex.tmp  classComputerOpenMP.tex  classComputerOpenMPNormal.tex  classComputerOpenMPNormal__coll__graph.dot  classComputerOpenMPNormal__coll__graph.md5  classComputerOpenMPNormal__inherit__graph.dot  classComputerOpenMPNormal__inherit__graph.md5  classComputerOpenMPQuick.tex  classComputerOpenMPQuick__coll__graph.dot  classComputerOpenMPQuick__coll__graph.md5  classComputerOpenMPQuick__inherit__graph.dot  classComputerOpenMPQuick__inherit__graph.md5  classComputerOpenMP__coll__graph.dot  classComputerOpenMP__coll__graph.md5  classComputerOpenMP__inherit__graph.dot  classComputerOpenMP__inherit__graph.md5  classComputerPthread.tex  classComputerPthreadNormal.tex  classComputerPthreadNormal__coll__graph.dot  classComputerPthreadNormal__coll__graph.md5  classComputerPthreadNormal__inherit__graph.dot  classComputerPthreadNormal__inherit__graph.md5  classComputerPthreadQuick.tex  classComputerPthreadQuick__coll__graph.dot  classComputerPthreadQuick__coll__graph.md5  classComputerPthreadQuick__inherit__graph.dot  classComputerPthreadQuick__inherit__graph.md5  classComputerPthread__coll__graph.dot  classComputerPthread__coll__graph.md5  classComputerPthread__inherit__graph.dot  classComputerPthread__inherit__graph.md5  classComputerSingleThread.tex  classComputerSingleThreadNormal.tex  classComputerSingleThreadNormal__coll__graph.dot  classComputerSingleThreadNormal__coll__graph.md5  classComputerSingleThreadNormal__inherit__graph.dot  classComputerSingleThreadNormal__inherit__graph.md5  classComputerSingleThreadQuick.tex  (+111 more)
legacy/: LSHlegacy.cpp  LSHlegacy.h  compute.cpp  legacy.cpp
legacy/MTCompute/: computeMt-openMP.cpp  computeMt-pthread.cpp  computeMt-stdthread.cpp
lengency/: hdfsRead.cpp  lengency.cpp
lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ref/: CC.cpp  DTW_HD.cpp  JCollisionCounting.cpp  comparation-top10.py  main.cpp  memcachedexa.cpp  shellCmd.sh  usefulLink
src/: CC.cpp  FileLoader.cpp  Generator.cpp  LSH.cpp  LSHEssential.cpp  Normalizer.cpp  compute.cpp  computeMt-openMP.cpp  fileLoader.cpp  hdfsRead.cpp  memcached.cpp  normalization.cpp  paragen.cpp
src/ClusterCompute/: boostmpiCompute.cpp
src/Computer/: OpenMPComputer.cpp  PthreadComputer.cpp  SingleThreadComputer.cpp  StdThreadComputer.cpp
src/FileLoader/: FileLoader.cpp  HdfsLoader.cpp  LfsLoader.cpp
src/InMemoryStore/: memcached.cpp  redis.cpp
src/clusterCompute/: boostmpiCompute.cpp
src/compute/: compute.cpp  computeMt-openMP.cpp  computeMt-pthread.cpp  computeMt-stdthread.cpp
src/compute/MTCompute/: computeMt-openMP.cpp  computeMt-pthread.cpp  computeMt-stdthread.cpp
src/compute/clusterCompute/: .boostmpiCompute.cpp.swp  boostmpiCompute.cpp  mpiCompute.cpp
src/inMemoryStore/: memcached.cpp  redis.cpp
tests/: driver.cpp  helper.cpp  main.cpp  mt-OpenMP_test.cpp
tests/dataset/: candidate.csv  dataset1000.csv  dataset1000NoIndex.csv
tests/unitTests/: ComputerTest.cpp  GeneratorTest.cpp  HdfsTest.cpp  MetaTest.cpp  SingleThreadTest.cpp  computerTest.cpp  hdfsTest.cpp  memcachedTest.cpp  metaTest.cpp  mt-OpenMPTest.cpp  mt-OpenMP_test.cpp  mt-pthreadTest.cpp  mt-stdthreadTest.cpp  redisTest.cpp  singleThreadTest.cpp
tests/unitTests/MTTests/: OpenMPTest.cpp  PthreadTest.cpp  StdthreadTest.cpp  mt-OpenMPTest.cpp  mt-pthreadTest.cpp  mt-stdthreadTest.cpp
tests/unitTests/inMemoryStoreTest/: MemcachedTest.cpp  RedisTest.cpp  memcachedTest.cpp  redisTest.cpp
(+5 files in other folders)
